更新 package.json

--- a/package.json
+++ b/package.json
@@ -10,13 +10,35 @@
   },
   "build": {
     "appId": "EdgeHaker-Mini-Bot",
-    "productName": "药草宝宝迷你桌面宠物",
+    "productName": "边缘骇客药草宝宝迷你桌面宠物",
+    "extraFiles": [
+      {
+        "from": "./assets",
+        "to": "./assets"
+      },
+      {
+        "from": "./icon.ico",
+        "to": "./icon.ico"
+      },
+      {
+        "from": "./message.txt",
+        "to": "./message.txt"
+      },
+      {
+        "from": "./config.json",
+        "to": "./config.json"
+      },
+      {
+        "from": "./icon.png",
+        "to": "./icon.png"
+      }
+    ],
     "directories": {
       "output": "build"
     },
     "win": {
       "target": "nsis",
-      "icon": "icon.png"
+      "icon": "./assets/icon.png"
     },
     "nsis": {
       "oneClick": false,
