--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "version": "2.0.0",
   "description": "边缘骇客药草宝宝迷你桌面宠物",
   "author": "上海预醒网络科技有限公司",
-  "name": "EdgeHaker-Mini-Bot",
+  "name": "doraemon-desktop-pet",
   "homepage": "https://livehelper.willwaking.com/",
   "scripts": {
     "start": "chcp 65001 && electron .",
@@ -10,7 +10,7 @@
   },
   "build": {
     "appId": "EdgeHaker-Mini-Bot",
-    "productName": "边缘骇客药草宝宝迷你桌面宠物",
+    "productName": "药草宝宝迷你桌面宠物",
     "extraFiles": [
       {
         "from": "./assets",
@@ -38,7 +38,7 @@
     },
     "win": {
       "target": "nsis",
-      "icon": "./assets/icon.png"
+      "icon": "./assets/icon.ico"
     },
     "nsis": {
       "oneClick": false,
@@ -63,6 +63,7 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
-    "electron": "27.1.3"
+    "electron": "27.1.3",
+    "electron-builder": "^25.1.8"
   }
 }
